--- a/WordChain.qrc
+++ b/WordChain.qrc
@@ -3,5 +3,7 @@
     <file>images/save.png</file>
     <file>images/open.png</file>
     <file>images/plus.png</file>
+    <file>images/arrow.png</file>
+    <file>images/line.png</file>
 </qresource>
 </RCC>
