--- a/WordChain.qrc
+++ b/WordChain.qrc
@@ -5,5 +5,6 @@
     <file>images/plus.png</file>
     <file>images/arrow.png</file>
     <file>images/line.png</file>
+    <file>images/play.png</file>
 </qresource>
 </RCC>
